week04/day3/handson/bad-pod-no-resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-no-resources
  namespace: secure-app
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    securityContext:
      allowPrivilegeEscalation: false
